# LoRA_MPO_LLM

./: .gitignore  eval_llama_MPO.csv  eval_llama_mpo.py  test_MPO.py  test_decompsion.py
MPO_Compression/: .gitignore  =0.41  =2.0  CONTRIBUTING.md  LICENSE  Makefile  README.md  ablation_global_perm_pure_tucker.py  ablation_llama_tucker.py  ablation_llama_tucker_multi.py  ablation_llama_tucker_multi_whitening.py  calibration.py  check_weights.py  demo_compare_full.py  eval_layerwise_ablation.py  eval_utils.py  evaluate_all_benchmarks.py  export2hf.py  healing.py  healing2.py  joint_6layer_ablation.csv  layerwise_ablation_results.csv  llama_svd_baseline.py  main.py  main_backup.py  main_custom_multi_layers.py  main_layer_16_test.py  main_progressive_with_e2e.py  main_progressive_with_e2e_2.py  main_sa_htn_tucker_pilot.py  main_single_layer_4gpu.py  main_svd_baseline.py  plot.py  pyproject.toml  requirements.txt  res_mpo_zs.json  res_orig_zs.json  run_ablation_ppl.py  run_custom_multi_ablation.py  test_dataset.py  (+3 more)
MPO_Compression/.github/workflows/: ci.yml
MPO_Compression/docs/: compressed_model_architecture.typ
MPO_Compression/mpo_modules/: __init__.py  core.py  factorization.py  factorization_utils.py  helpers.py  model_utils.py  patches.py  ring_ops.py  tt_ops.py
MPO_Compression/tests/: conftest.py  test_ablation_global_perm_pure_tucker.py  test_core.py  test_factorization.py  test_factorization_utils.py  test_helpers.py  test_main_sa_htn_tucker_pilot.py  test_ring_ops.py  test_tt_ops.py
