[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpo-compression"
version = "0.1.0"
description = "Extreme compression of Large Language Models using quantum-inspired Matrix Product Operator (MPO) tensor networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Huicheng Zheng", email = "zhc1212@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "accelerate>=0.24",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "pre-commit",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/zhc1212/MPO_Compression"
Repository = "https://github.com/zhc1212/MPO_Compression"
Issues = "https://github.com/zhc1212/MPO_Compression/issues"

[tool.hatch.build.targets.wheel]
packages = ["mpo_modules"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701", "E702", "E722", "E402", "W293", "W291", "E741", "F841"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring GPU or model downloads (deselect with '-m \"not integration\"')",
]
addopts = "-v --tb=short"
